# coros-mcp

./: Dockerfile  README.md  pyproject.toml
docs/: coros-api-spec.md
src/coros_mcp/: __init__.py  __main__.py  activities.py  analysis.py  auth_tool.py  client_factory.py  coros_client.py  coros_platform.py  dashboard.py  plans.py  profile.py  training.py  utils.py  workouts.py
src/coros_mcp/api/: __init__.py  activities.py  calendar.py  exercises.py  model.py  plans.py  profile.py  status.py  workouts.py
src/coros_mcp/sdk/: __init__.py  activities.py  analysis.py  auth.py  client.py  dashboard.py  plans.py  training.py  types.py  workouts.py
tests/: __init__.py  conftest.py  test_activities.py  test_analysis.py  test_auth_tool.py  test_dashboard.py  test_plans.py  test_profile.py  test_training.py  test_utils.py  test_workouts.py
tests/api/: test_activities.py  test_calendar.py  test_exercises.py  test_model.py  test_plans.py  test_profile.py  test_status.py  test_workouts.py
tests/sdk/: test_activities.py  test_analysis.py  test_auth.py  test_client.py  test_dashboard.py  test_training.py  test_types.py  test_workouts.py
tests/spec/: conftest.py  test_endpoints.py
