[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coros-mcp"
version = "0.1.0"
description = "MCP server to access COROS Training Hub data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "mcp==1.3.0",
]

[project.scripts]
coros-mcp = "coros_mcp:main"

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.2",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.3.1",
]

[tool.uv.sources]
coros-mcp = { workspace = true }
