[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coros-mcp"
version = "0.1.0"
description = "MCP server to access COROS Training Hub data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.1.0",
    "requests==2.32.3",
    "fastmcp>=2.3.0",
]

[project.scripts]
coros-mcp = "coros_mcp:main"

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.2",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.3.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Spec tests hit real COROS API — run explicitly: pytest tests/spec/ -v
addopts = "--ignore=tests/spec"

[tool.uv.sources]
coros-mcp = { workspace = true }
